--- a/bio.html
+++ b/bio.html
@@ -6,13 +6,16 @@
 <body>
      <h1>Branden Olson</h1>
      <h2>Bio</h2>
-    <p>
-I am a first-year PhD student in the Department of Statistics at the University of Washington, Seattle. 
+     <p class="bio">
+     I am a first-year PhD student in the <a href="https://www.stat.washington.edu/">Department of Statistics</a>
+     at the <a href="https://www.washington.edu/">University of Washington, Seattle</a>.
 <br> <br>
-Currently, I am working with Peter Guttorp on statistical modeling of cloud columns and uncertainty assessment for use in general circulation models.
+Currently, I am working with <a href="https://www.stat.washington.edu/peter/">Peter Guttorp</a> on statistical modeling of cloud columns and uncertainty assessment for use in general circulation models.
 <br> <br>
-My research interests include spatiotemporal statistical modeling, statistical climatology, and stochastic weather generation.
+I received my B.S. and M.S. degrees in <a href="http://www.colorado.edu/amath/">Applied Mathematics</a> from the <a href="http://www.colorado.edu/">University of Colorado at Boulder</a>, under the supervision of <a href="http://amath.colorado.edu/faculty/kleiberw/">Will Kleiber</a>.
+My <a href="http://gradworks.umi.com/10/12/10124035.html">thesis</a> introduced approximate Bayesian computation techniques for daily spatiotemporal temperature and precipitation occurrence simulation.
     </p>
+    <hr class="bio">
     <h3><a href="index.html">Back</a></h3>
 </body>
 </html>
