--- a/bio.html
+++ b/bio.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="styles.css" rel="stylesheet" type="text/css"/>
+        <title>Branden Olson's Homepage</title>
     </head>
 <body>
      <h1>Branden Olson</h1>
