--- a/bio.html
+++ b/bio.html
@@ -7,16 +7,28 @@
 <body>
      <h1>Branden Olson</h1>
      <h2>Bio</h2>
-     <p class="bio">
+     <table width=100% height=100%>
+         <tr>
+             <td width=25%></td>
+             <td width=25%>
+                <img src="Images/Boulder.jpg" width=100% style="display:block">
+             </td>
+             <td width=25% vertical-align="top">
+     <p>
      I am a first-year PhD student in the <a href="https://www.stat.washington.edu/">Department of Statistics</a>
      at the <a href="https://www.washington.edu/">University of Washington, Seattle</a>.
 <br> <br>
-Currently, I am working with <a href="https://www.stat.washington.edu/peter/">Peter Guttorp</a> on statistical modeling of cloud columns and uncertainty assessment for use in general circulation models.
+Currently, I am working with <a href="https://www.stat.washington.edu/peter/">Peter Guttorp</a> on problems arising in statistical climatology, most prominently the statistical modeling of cloud columns and uncertainty assessment for use in general circulation models.
 <br> <br>
 I received my B.S. and M.S. degrees in <a href="http://www.colorado.edu/amath/">Applied Mathematics</a> from the <a href="http://www.colorado.edu/">University of Colorado at Boulder</a>, under the supervision of <a href="http://amath.colorado.edu/faculty/kleiberw/">Will Kleiber</a>.
 My <a href="http://gradworks.umi.com/10/12/10124035.html">thesis</a> introduced approximate Bayesian computation techniques for daily spatiotemporal temperature and precipitation occurrence simulation.
     </p>
+             </td>
+             <td width=25%></td>
+         </tr>
+     </table>
     <hr class="bio">
-    <h3><a href="index.html">Back</a></h3>
+    <h3><a href="index.html">Home</a> |
+        <a href="bio.html">Bio</a> | <a href="research.html">Research</a> | <a href="BrandenOlsonCV.pdf">CV</a></h3>
 </body>
 </html>
