--- a/bio.html
+++ b/bio.html
@@ -5,16 +5,58 @@
         <title>Branden Olson's Homepage</title>
     </head>
 <body>
-     <h1>Branden Olson</h1>
-     <h2>Bio</h2>
-     <table width=100% height=100%>
-         <tr>
-             <td width=25%></td>
-             <td width=25%>
-                <img src="Images/Boulder.jpg" width=100% style="display:block">
-             </td>
-             <td width=25% vertical-align="top">
-     <p>
+    <div id="page">
+        <div id="panel">
+            <table>
+                <tr>
+                    <td>
+                        <img src="Images/Boulder.jpg" width=250px id="image" align="right">
+                    </td>
+                    <td>
+                        <font size="5" face="Geneva, Arial, Helvetica, san-serif">
+                            Branden Olson</font> <br><br>
+                        <font size="3" face="Geneva, Arial, Helvetica, san-serif">
+                        Research Associate<br>
+                        Department of Statistics<br>
+                        University of Washington<br>
+                        Seattle, WA
+                        <br><br>
+                        Office: PDL A-314<br>
+                        Phone: 970.390.6129<br>
+                        Email: 
+                        <font face="Monaco">
+                        branden.olson@gmail.com
+                        <br><br>
+                        </font>
+                        </font>
+                    </td>
+                </tr>
+            </table>
+            <br>
+            <table align="center">
+                <tr>
+                    <td>
+                        <font size="4" face="Geneva, Arial, Helvetica, san-serif">
+                            <a href="index.html">Home</a> |<br>
+                    </td>
+                    <td>
+                        <font size="4" face="Geneva, Arial, Helvetica, san-serif">
+                            <a href="bio.html">Bio</a> |<br>
+                    </td>
+                    <td>
+                        <font size="4" face="Geneva, Arial, Helvetica, san-serif">
+                            <a href="research.html">Research</a> |<br>
+                    </td>
+                    <td>
+                        <font size="4" face="Geneva, Arial, Helvetica, san-serif">
+                            <a href="BrandenOlsonCV.pdf">CV</a>
+                        </font>
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <div id="maincontent">
+    <p>
      I am a first-year PhD student in the <a href="https://www.stat.washington.edu/">Department of Statistics</a>
      at the <a href="https://www.washington.edu/">University of Washington, Seattle</a>.
 <br> <br>
@@ -23,12 +65,7 @@ Currently, I am working with <a href="https://www.stat.washington.edu/peter/">Pe
 I received my B.S. and M.S. degrees in <a href="http://www.colorado.edu/amath/">Applied Mathematics</a> from the <a href="http://www.colorado.edu/">University of Colorado at Boulder</a>, under the supervision of <a href="http://amath.colorado.edu/faculty/kleiberw/">Will Kleiber</a>.
 My <a href="http://gradworks.umi.com/10/12/10124035.html">thesis</a> introduced approximate Bayesian computation techniques for daily spatiotemporal temperature and precipitation occurrence simulation.
     </p>
-             </td>
-             <td width=25%></td>
-         </tr>
-     </table>
-    <hr class="bio">
-    <h3><a href="index.html">Home</a> |
-        <a href="bio.html">Bio</a> | <a href="research.html">Research</a> | <a href="BrandenOlsonCV.pdf">CV</a></h3>
+    </div>
+    </div>
 </body>
 </html>
