--- a/bio.html
+++ b/bio.html
@@ -13,7 +13,7 @@
                         <img src="Images/Boulder.jpg" width=230px id="image" align="right">
                     </td>
                     <td>
-                        <font size="5" face="Geneva, Arial, Helvetica, san-serif" color="saddlebrown">
+                        <font size="5" face="Geneva, Arial, Helvetica, san-serif" color="#7A4C1D">
                             Branden Olson</font> <br><br>
                         <font size="3" face="Geneva, Arial, Helvetica, san-serif">
                         Research Associate<br>
@@ -33,7 +33,7 @@
                 </tr>
             </table>
             <br>
-            <table align="center">
+            <table>
                 <tr>
                     <td>
                         <font size="4" face="Geneva, Arial, Helvetica, san-serif">
