--- a/bio.html
+++ b/bio.html
@@ -56,6 +56,7 @@
             </table>
         </div>
         <div id="maincontent">
+            <h2>Bio</h2>
     <p>
      I am a first-year PhD student in the <a href="https://www.stat.washington.edu/">Department of Statistics</a>
      at the <a href="https://www.washington.edu/">University of Washington, Seattle</a>.
@@ -64,6 +65,8 @@ Currently, I am working with <a href="https://www.stat.washington.edu/peter/">Pe
 <br> <br>
 I received my B.S. and M.S. degrees in <a href="http://www.colorado.edu/amath/">Applied Mathematics</a> from the <a href="http://www.colorado.edu/">University of Colorado at Boulder</a>, under the supervision of <a href="http://amath.colorado.edu/faculty/kleiberw/">Will Kleiber</a>.
 My <a href="http://gradworks.umi.com/10/12/10124035.html">thesis</a> introduced approximate Bayesian computation techniques for daily spatiotemporal temperature and precipitation occurrence simulation.
+<br><br>
+I have experience interning as a data scientist at <a href="https://www.paysa.com/">Paysa</a>, analytics developer at <a href="http://www.seagate.com/">Seagate</a>, and software engineer at <a href="https://www.spectralogic.com/">Spectra</a>.
     </p>
     </div>
     </div>
