--- a/bio.html
+++ b/bio.html
@@ -9,6 +9,9 @@
         $(function(){
            $("#sidebar").load("sidebar.html");
         });
+        $(function(){
+           $("#foot").load("foot.html");
+        });
     </script>
     </head>
     <body>
@@ -31,5 +34,6 @@
                 </p>
             </div>
         </div>
+        <div id="foot"></div>
     </body>
 </html>
