Fixing float issue for index and bio

--- a/bio.html
+++ b/bio.html
@@ -9,8 +9,7 @@
         $(function(){
            $("#sidebar").load("sidebar.html");
         });
-        $(function(){
-           $("#foot").load("foot.html");
+        $(function(){ $("#foot").load("foot.html");
         });
     </script>
     </head>
@@ -33,7 +32,7 @@
                 I have experience interning as a data scientist at <a href="https://www.paysa.com/">Paysa</a>, analytics developer at <a href="http://www.seagate.com/">Seagate</a>, and software engineer at <a href="https://www.spectralogic.com/">Spectra</a>.
                 </p>
             </div>
-        </div>
         <div id="foot"></div>
+        </div>
     </body>
 </html>
